チュー取り合うUIの表示途中（チュートリアルのテキストを入れるだけ）

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Application\SourceCode\TargetCamera.cpp" />
     <ClCompile Include="Application\SourceCode\Task.cpp" />
     <ClCompile Include="Application\SourceCode\TitleUI.cpp" />
+    <ClCompile Include="Application\SourceCode\TutorialUI.cpp" />
     <ClCompile Include="Application\SourceCode\UIManager.cpp" />
     <ClCompile Include="Application\SourceCode\Vignette.cpp" />
     <ClCompile Include="Application\SourceCode\Weapon.cpp" />
@@ -256,6 +257,7 @@
     <ClInclude Include="Application\SourceCode\TargetCamera.h" />
     <ClInclude Include="Application\SourceCode\Task.h" />
     <ClInclude Include="Application\SourceCode\TitleUI.h" />
+    <ClInclude Include="Application\SourceCode\TutorialUI.h" />
     <ClInclude Include="Application\SourceCode\UIManager.h" />
     <ClInclude Include="Application\SourceCode\Vignette.h" />
     <ClInclude Include="Application\SourceCode\Weapon.h" />
