--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -113,8 +113,13 @@ Size=152,834
 Collapsed=0
 
 [Window][Lighting]
-Pos=26,388
+Pos=124,343
 Size=624,203
+Collapsed=0
+
+[Window][Skydome]
+Pos=190,431
+Size=599,152
 Collapsed=0
 
 [Docking][Data]
