アイテムUIのところに回復瓶のUIを描画させた

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -129,6 +129,8 @@
     <ClCompile Include="Application\SourceCode\ICamera.cpp" />
     <ClCompile Include="Application\SourceCode\IMotion.cpp" />
     <ClCompile Include="Application\SourceCode\ItemBoxUI.cpp" />
+    <ClCompile Include="Application\SourceCode\ItemBoxUIManager.cpp" />
+    <ClCompile Include="Application\SourceCode\ItemUI.cpp" />
     <ClCompile Include="Application\SourceCode\IWeaponMotion.cpp" />
     <ClCompile Include="Application\SourceCode\MenuManager.cpp" />
     <ClCompile Include="Application\SourceCode\MotionManager.cpp" />
@@ -239,6 +241,8 @@
     <ClInclude Include="Application\SourceCode\ICamera.h" />
     <ClInclude Include="Application\SourceCode\IMotion.h" />
     <ClInclude Include="Application\SourceCode\ItemBoxUI.h" />
+    <ClInclude Include="Application\SourceCode\ItemBoxUIManager.h" />
+    <ClInclude Include="Application\SourceCode\ItemUI.h" />
     <ClInclude Include="Application\SourceCode\IWeaponMotion.h" />
     <ClInclude Include="Application\SourceCode\MenuManager.h" />
     <ClInclude Include="Application\SourceCode\MotionManager.h" />
