--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -113,14 +113,16 @@ Size=152,834
 Collapsed=0
 
 [Window][Lighting]
-Pos=124,343
-Size=624,203
+Pos=1362,58
+Size=517,43
 Collapsed=0
+DockId=0x0000000E,0
 
 [Window][Skydome]
-Pos=190,431
-Size=599,152
+Pos=1362,58
+Size=517,43
 Collapsed=0
+DockId=0x0000000E,1
 
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
@@ -136,4 +138,5 @@ DockNode    ID=0x0000000A Pos=158,63 Size=724,197 Split=X Selected=0x73CB1CFE
   DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=182,153 Selected=0x704CD24F
   DockNode  ID=0x0000000D Parent=0x0000000A SizeRef=180,153 Selected=0x73CB1CFE
 DockNode    ID=0x0000000B Pos=1417,455 Size=419,438 Selected=0x7FDF5256
+DockNode    ID=0x0000000E Pos=1362,58 Size=517,43 Selected=0x9BB92E70
 
