--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -510,6 +510,12 @@
     <ClCompile Include="NewEngine\Collision\ICollider.cpp">
       <Filter>NewEngine\Source\Collision</Filter>
     </ClCompile>
+    <ClCompile Include="Application\SourceCode\ItemUI.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\ItemBoxUIManager.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -856,6 +862,12 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Collision\ICollider.h">
       <Filter>NewEngine\Header\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\ItemUI.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\ItemBoxUIManager.h">
+      <Filter>Uncategorized\Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
