作ってあるボスのモーションを全部入れた

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -113,8 +113,10 @@
     <ClCompile Include="Application\SourceCode\BackstepMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Bloom.cpp" />
     <ClCompile Include="Application\SourceCode\Boss.cpp" />
+    <ClCompile Include="Application\SourceCode\BossAttack3Motion.cpp" />
     <ClCompile Include="Application\SourceCode\BossAttack2Motion.cpp" />
     <ClCompile Include="Application\SourceCode\BossBody.cpp" />
+    <ClCompile Include="Application\SourceCode\BossGrabAttackMotion.cpp" />
     <ClCompile Include="Application\SourceCode\CameraManager.cpp" />
     <ClCompile Include="Application\SourceCode\Character.cpp" />
     <ClCompile Include="Application\SourceCode\Cloud.cpp" />
@@ -227,8 +229,10 @@
     <ClInclude Include="Application\SourceCode\BackstepMotion.h" />
     <ClInclude Include="Application\SourceCode\Bloom.h" />
     <ClInclude Include="Application\SourceCode\Boss.h" />
+    <ClInclude Include="Application\SourceCode\BossAttack3Motion.h" />
     <ClInclude Include="Application\SourceCode\BossAttack2Motion.h" />
     <ClInclude Include="Application\SourceCode\BossBody.h" />
+    <ClInclude Include="Application\SourceCode\BossGrabAttackMotion.h" />
     <ClInclude Include="Application\SourceCode\CameraManager.h" />
     <ClInclude Include="Application\SourceCode\Character.h" />
     <ClInclude Include="Application\SourceCode\Cloud.h" />
