--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -531,6 +531,12 @@
     <ClCompile Include="Application\SourceCode\Character.cpp">
       <Filter>Uncategorized\Source</Filter>
     </ClCompile>
+    <ClCompile Include="Application\SourceCode\BossAttack3Motion.cpp">
+      <Filter>Application\Source\Motion\Boss</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\BossGrabAttackMotion.cpp">
+      <Filter>Application\Source\Motion\Boss</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -892,6 +898,12 @@
     </ClInclude>
     <ClInclude Include="Application\SourceCode\Character.h">
       <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\BossAttack3Motion.h">
+      <Filter>Application\Header\Motion\Boss</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\BossGrabAttackMotion.h">
+      <Filter>Application\Header\Motion\Boss</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
