--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -537,6 +537,18 @@
     <ClCompile Include="Application\SourceCode\BossGrabAttackMotion.cpp">
       <Filter>Application\Source\Motion\Boss</Filter>
     </ClCompile>
+    <ClCompile Include="NewEngine\Object\3D\Emitter.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\3D\ParticleParam.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="BloodSpray.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\EffectManager.cpp">
+      <Filter>Uncategorized\Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -905,6 +917,18 @@
     <ClInclude Include="Application\SourceCode\BossGrabAttackMotion.h">
       <Filter>Application\Header\Motion\Boss</Filter>
     </ClInclude>
+    <ClInclude Include="NewEngine\Object\3D\Emitter.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\3D\ParticleParam.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\BloodSpray.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\EffectManager.h">
+      <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="NewEngine\Shader\Blur.hlsli">
@@ -975,6 +999,9 @@
     </None>
     <None Include="Application\Shader\Cloud.hlsli">
       <Filter>Shader\Application</Filter>
+    </None>
+    <None Include="NewEngine\Shader\Emitter.hlsli">
+      <Filter>Shader\Engine</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -1097,6 +1124,15 @@
     </FxCompile>
     <FxCompile Include="Application\Shader\CloudVS.hlsl">
       <Filter>Shader\Application</Filter>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\EmitterPS.hlsl">
+      <Filter>Shader\Engine</Filter>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\EmitterVS.hlsl">
+      <Filter>Shader\Engine</Filter>
+    </FxCompile>
+    <FxCompile Include="NewEngine\Shader\EmitterGS.hlsl">
+      <Filter>Shader\Engine</Filter>
     </FxCompile>
   </ItemGroup>
 </Project>
