viewProj変わってるのになんで同じ所描画してるんだ？？？？？？？？？

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -103,9 +103,10 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][HumanoidBody]
-Pos=1490,39
-Size=400,50
+Pos=1257,59
+Size=549,149
 Collapsed=0
+DockId=0x0000000E,2
 
 [Window][PlayerBody]
 Pos=60,60
@@ -113,14 +114,14 @@ Size=152,834
 Collapsed=0
 
 [Window][Lighting]
-Pos=1362,58
-Size=517,43
+Pos=1257,59
+Size=549,149
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Skydome]
-Pos=1362,58
-Size=517,43
+Pos=1257,59
+Size=549,149
 Collapsed=0
 DockId=0x0000000E,1
 
@@ -138,5 +139,5 @@ DockNode    ID=0x0000000A Pos=158,63 Size=724,197 Split=X Selected=0x73CB1CFE
   DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=182,153 Selected=0x704CD24F
   DockNode  ID=0x0000000D Parent=0x0000000A SizeRef=180,153 Selected=0x73CB1CFE
 DockNode    ID=0x0000000B Pos=1417,455 Size=419,438 Selected=0x7FDF5256
-DockNode    ID=0x0000000E Pos=1362,58 Size=517,43 Selected=0x9BB92E70
+DockNode    ID=0x0000000E Pos=1257,59 Size=549,149 Selected=0x36FF2379
 
