処理順を少しだけ変えてみたけど変わらない

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -139,5 +139,5 @@ DockNode    ID=0x0000000A Pos=158,63 Size=724,197 Split=X Selected=0x73CB1CFE
   DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=182,153 Selected=0x704CD24F
   DockNode  ID=0x0000000D Parent=0x0000000A SizeRef=180,153 Selected=0x73CB1CFE
 DockNode    ID=0x0000000B Pos=1417,455 Size=419,438 Selected=0x7FDF5256
-DockNode    ID=0x0000000E Pos=1257,59 Size=549,149 Selected=0x36FF2379
+DockNode    ID=0x0000000E Pos=1257,59 Size=549,149 Selected=0x9B1E76BE
 
