--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Application\SourceCode\MalletMotion.cpp" />
     <ClCompile Include="Application\SourceCode\NegotiationUI.cpp" />
     <ClCompile Include="Application\SourceCode\Player.cpp" />
+    <ClCompile Include="Application\SourceCode\PlayerRecoveryEffect.cpp" />
     <ClCompile Include="Application\SourceCode\RadialBlur.cpp" />
     <ClCompile Include="Application\SourceCode\RollMotion.cpp" />
     <ClCompile Include="Application\SourceCode\Scene\GameScene.cpp" />
@@ -269,6 +270,7 @@
     <ClInclude Include="Application\SourceCode\NegotiationUI.h" />
     <ClInclude Include="Application\SourceCode\Player.h" />
     <ClInclude Include="Application\SourceCode\PlayerBody.h" />
+    <ClInclude Include="Application\SourceCode\PlayerRecoveryEffect.h" />
     <ClInclude Include="Application\SourceCode\RadialBlur.h" />
     <ClInclude Include="Application\SourceCode\RollMotion.h" />
     <ClInclude Include="Application\SourceCode\Scene\GameScene.h" />
